--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^5.2.9",
     "expo-image-picker": "^8.1.0",
     "firebase": "^7.13.2",
+    "memoize-one": "^5.1.1",
     "react": "16.13.1",
     "react-native": "0.63.1",
     "react-native-elements": "^1.2.7",
@@ -29,6 +30,7 @@
     "react-native-reanimated": "^1.7.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-simple-toast": "^1.1.2",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
